<resources>
    <string name="app_name">HeHeXposed</string>
    <string name="inside_activity_name_mode">Mode</string>
    <string name="inside_activity_name_feedback">Feedback</string>
    <string name="inside_activity_name_bgdfgdFunction">Background monitoring</string>
    <string name="inside_activity_name_default">Default Setting</string>
    <string name="inside_activity_name_pwdsetting">Password Setting</string>
    <string name="inside_activity_name_whitelist">Whitelist Settings</string>
    <string name="inside_activity_name_into">Introduction</string>
    <string name="inside_activity_name_Instruction">Instruction</string>
    <string name="app_mod_summary">We are IS&#8230;</string>
    <string name="admin_email">15049782d@connect.polyu.hk</string>
    <string name="main_activity_inroo">Here get Smart Location Obfuscation</string>
    <string name="nth"> </string>
    <string name="empty_state">Add apps that you want this module to spoof. All apps can currently detect your Mock Locations setting.</string>
    <string name="all_apps_whitelisted_state">No apps should be able to detect that Mock Locations is on.</string>
    <string name="loading_app_list">Loading your apps.</string>
    <string name="toolbar_whitelist_all_setting">All Apps</string>
    <string name="toolbar_whitelist_add_app">Add App</string>
    <string name="dialog_whitelist_title_add_app">Add App To Mock</string>
    <string name="toolbar_whitelist_donation">Test</string>
    <string name="remove_app_title">Remove App</string>
    <string name="remove_app_message">Removed apps will detect Mock Locations is enabled.</string>
    <string name="restart_required">Force kill the target app to apply changes.</string>
    <string name="dialog_remind">Are you sure?</string>
    <string name="typeagain">type your password again</string>
    <string name="settings_title">Settings</string>
    <string name="settings_noise">Noise</string>
    <string name="feedback_category_1">The noise quality feedback</string>
    <string name="feedback_category_2">Other feedback</string>
    <string name="whitelist_Search_hints">Type the apps name</string>
    <string name="whitelist_Search_button">FastKey</string>
    <string name="settings_display_resource">Application resource: </string>
    <string name="settings_list_resource">Show Me</string>
    <string name="settings_display_permissions">Change the permissions: </string>
    <string name="settings_permissions">Permissions</string>
    <string name="settings_noise_add">Noise: </string>
    <string name="settings_default">(default)</string>
    <string-array name="Filter">
        <item>Type</item>
        <item>State</item>
    </string-array>
    <string-array name="ref_list">
        <item>HideMockLocation</item>
        <item>XposedAppSettings</item>
        <item>Whitelist</item>
        <item><a href="http://stackoverflow.com/users/1048340/jared-rummler">Jared Rummler</a></item>
        <item>Icon design: iconos de viajes</item>
    </string-array>
    <string-array name="menu_array">
        <item>About Me</item>
        <item>Introduction</item>
        <item>Reference List</item>
        <item>Instructions</item>
        <item>Enable HeHeXposed</item>
        <item>Set the Whitelist</item>
        <item>Category get</item>
        <item>Enable the Mode</item>
        <item>Feedback</item>
        <item>Enable Fgd and Bgd Noise</item>
        <item>Clear all Setting</item>
        <item>Enable Movement</item>
        <item>Password setting</item>
    </string-array>
    <string-array name="def_setting">
        <item>Default</item>
        <item>Customer</item>
        <item>Low</item>
        <item>Medium</item>
        <item>Highest</item>
    </string-array>
    <string name="pin_content_desc">PIN input field</string>
    <string name="pin_label_text">PIN</string>
    <string-array name="FeedbackList">
        <item>Comfortable List</item>
        <item>Email Feedback to Administration</item>
    </string-array>
    <string name="FeedbackChoice1">Too Strong</string>
    <string name="FeedbackChoice2">Comfortable</string>
    <string name="FeedbackChoice3">Too Week</string>
    <string name="feedback_other">Your other opinion: </string>
    <string name="feedbackIntro">Thank you for your using,  here you can choose your opinion of this module:</string>
    <string name="feedbackinput_hints">Please input what you want to tell me</string>
    <string name="Contact_hints">Please input your contact</string>
    <string name="Email_hints">Please input your email</string>
    <string name="feedback_dialog_intro">Please type your feedback to me: </string>
    <string name="mode_rest_start_time_button">Rest start time Set up</string>
    <string name="mode_rest_end_time_button">Rest end time Set up</string>
    <string name="mode_work_start_time_button">Work start time Set up</string>
    <string name="mode_work_end_time_button">Work end time Set up</string>
    <string name="clear_rest_but_title">Clear Rest mode setting</string>
    <string name="clear_work_but_titile">Clear Work mode setting</string>
    <string name="rest_mode">Rest mode On</string>
    <string name="work_mode">Work mode On</string>
    <string name="default_text">Text</string>
    <string name="Notice_def_setting">Restart your phone after update.</string>
    <string name="def_setting_intro">You can choose level: </string>
    <string name="Customer_setting">Your customer number: </string>
    <string name="Customer_hints">Input between 1-99</string>
    <string name="instructions_title">Instruction 指引</string>
    <string name="intro_content1">With the prosperity of mobile and smart devices, the mobile devices security increasingly important.</string>
    <string name="intro_content2">Consider the information confidentiality of mobile; it required a necessary method to keep the information secret.</string>
    <string name="intro_content3">It is the primary reason for this project He, to affect the original result of any unauthorized access, which tracking the victim user\'s mobile location information.</string>
    <string name="intro_content4">By passing create Xposed module, adding noise to the GPS location, which aims to retrieve from the GPS hardware and the mobile\'s core location framework rather than modify the result of GPS location data.</string>
    <string name="intro_content5">Obfuscating user location to achieve the goal of against malicious Android apps.</string>
    <string name="intro_content6">This project aims to provide a security method to let the client get rid of the risk of monitoring, reduce the probability of the personal information like GPS location exposed by any action which client does not expect.</string>
    <string name="intro_content7">It will be an Android application that gains a lot of potential users and encourages a world to avoid monitoring each other.</string>
    <string name="email"><a href="mailto:15049782d@connect.polyu.hk">Contact Me</a></string>
    <string name="bgdfgdStartService">Get start</string>
    <string name="bgdfgdStopService">Stop it</string>
    <string name="resetPWD">Reset password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About Me</string>
    <string name="menuSaveToSd">Save to SD card</string>
    <string name="menuClearLog">Clear log now</string>
    <string name="menuReload">Reload</string>
    <string name="scroll_top">Scroll to top</string>
    <string name="scroll_bottom">Scroll to bottom</string>
    <string name="settings_subtitle">Location Obfuscation Setting</string>
    <string name="app_loading">Loading apps, please wait</string>
    <string name="app_searchhint">name or package</string>
    <string name="app_about"> Hi, We are IS. \n
        兩個老闆 => <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> and <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>.
 \nYou can use <a href="http://forum.xda-developers.com/showthread.php?t=2437377">this thread</a> for questions or suggestions.</string>
    <string name="app_description"> </string>
    <string name="app_version">Version: %s</string>
    <string name="app_translation">Translator: %s</string>
    <string name="app_notactive_warning">Note: Although the configuration panels can be used as-is,
they will only affect the apps if the Xposed framework is installed and if this module
is enabled in its configuration!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_recents">Recent apps</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="menu_about">About</string>
    <string name="imp_exp_file_doesnt_exist">File does not exist: %s</string>
    <string name="imp_exp_confirm">Replace all settings with the ones that are about to be imported?</string>
    <string name="imp_exp_exported">Settings exported to file: %s</string>
    <string name="imp_exp_export_error">Export failed: %s</string>
    <string name="imp_exp_import_error">Import failed: %s</string>
    <string name="imp_exp_invalid_import_file">Invalid or empty file to import: %s</string>
    <string name="imp_exp_imported">Import successful; settings replaced</string>
    <string name="menu_save">Save</string>
    <string name="menu_launch">Launch</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_playstore">Play Store</string>
    <string name="settings_dpi">DPI</string>
    <string name="settings_fontscale">Font scale</string>
    <string name="settings_listres">List res.</string>
    <string name="settings_screen">Screen (dp)</string>
    <string name="settings_xlargeres">xlarge res.</string>
    <string name="settings_resonwidgets">Apply res to widgets</string>
    <string name="settings_locale">Locale</string>
    <string name="settings_fullscreen">Fullscreen</string>
    <string name="settings_notitle">No title</string>
    <string name="settings_screenon">Keep screen on</string>
    <string name="settings_showwhenlocked">Show when locked</string>
    <string name="settings_resident">Resident</string>
    <string name="settings_nofullscreenime">No Fullscreen IME</string>
    <string name="settings_orientation">Orientation</string>
    <string name="settings_insistentnotif">Insistent notifications</string>
    <string name="settings_nobignotif">No big notifications</string>
    <string name="settings_ongoingnotif">Ongoing notifications</string>
    <string name="settings_notifpriority">Notifications priority</string>
    <string name="settings_mute">Mute audio</string>
    <string name="settings_legacy_menu">Legacy menu button</string>
    <string name="settings_recents_mode">Show in recents</string>
    <string name="settings_force">Force</string>
    <string name="settings_prevent">Prevent</string>
    <string name="settings_immersive">Immersive</string>
    <string name="settings_ori_normal">Normal rotation</string>
    <string name="settings_ori_portrait">Always portrait</string>
    <string name="settings_ori_landscape">Always landscape</string>
    <string name="settings_ori_forceauto">Force auto-rotation</string>
    <string name="settings_ori_portrait_sensor">Always portrait (sensor)</string>
    <string name="settings_ori_landscape_sensor">Always landscape (sensor)</string>
    <string name="settings_ori_portrait_reverse">Always portrait (reverse)</string>
    <string name="settings_ori_landscape_reverse">Always landscape (reverse)</string>
    <string name="settings_ori_forceauto_4way">Force auto-rotation (4-way)</string>
    <string name="userappsname_show_whitelist">User application only</string>
    <string name="systemappsname_show_whitelist">System application only</string>
    <string name="allappsname_show_whitelist">All application</string>
    <string name="dialog_filter_description">Choose which one you need</string>
</resources>