<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_app_launch"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="withText"
        android:title="@string/menu_launch"/>
    <item
        android:id="@+id/menu_app_settings"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="withText"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_app_store"
        app:showAsAction="withText"
        android:title="@string/menu_playstore"/>

</menu>
