<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Notice_restart_mode"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:gravity="center"
        android:text="@string/Notice_def_setting"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/workmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text" />

        <TextView
            android:id="@+id/workmode_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text" />

        <TextView
            android:id="@+id/workmode_endtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_starttime_work"
                android:layout_width="188dp"
                android:layout_height="36dp"
                android:text="@string/mode_work_start_time_button" />

            <Button
                android:id="@+id/but_endtime_work"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:text="@string/mode_work_end_time_button" />
        </LinearLayout>

        <Button
            android:id="@+id/but_clear_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_work_but_titile" />

        <ToggleButton
            android:id="@+id/WorkModeOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_mode" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/restmode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
             />
        <TextView
            android:id="@+id/restmode_starttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            />
        <TextView
            android:id="@+id/restmode_endtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/but_starttime_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode_rest_start_time_button" />

            <Button
                android:id="@+id/but_endtime_rest"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:text="@string/mode_rest_end_time_button" />
        </LinearLayout>

        <Button
            android:text="@string/clear_rest_but_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/but_clear_rest" />

        <ToggleButton
            android:text="@string/rest_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RestModeOn" />

    </LinearLayout>

</LinearLayout>
