<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/feedback_dialog_intro"
        android:id="@+id/feedback_dialog" />

    <EditText
        android:id="@+id/feedback_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="3"
        android:maxLines="1"
        android:maxLength="3"
        android:hint="@string/feedbackinput_hints"
        android:padding="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/Your_contact_email"
        android:hint="@string/Email_hints"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="11"
        android:maxLines="1"
        android:maxLength="8"
        android:id="@+id/Your_contact_phone"
        android:hint="@string/Contact_hints"/>

</LinearLayout>