<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:weightSum="1">

    <TextView
        android:text="@string/feedbackIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/feedback_intro" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="148dp" >

        <RadioGroup
            android:id="@+id/comfortable_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RadioButton
                android:text="@string/FeedbackChoice1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Strong" />

            <RadioButton
                android:text="@string/FeedbackChoice2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Suitable"
                />

            <RadioButton
                android:text="@string/FeedbackChoice3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Week" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/feedback_other"
        android:id="@+id/OtherFeedbackInro"
        android:layout_weight="0.10" />

    <ImageButton
        android:id="@+id/feedback_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_feedback" />

    <TextView
        android:text="@string/feedbackIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/show" />

</LinearLayout>