<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/whitelist_dialog_filer_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_description"
        android:textSize="36sp"
        android:textStyle="bold" />
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="148dp" >

        <RadioGroup
            android:id="@+id/filterRadiogroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RadioButton
                android:text="@string/allappsname_show_whitelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/allapps_show_whitelist" />

            <RadioButton
                android:text="@string/systemappsname_show_whitelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/systemapps_show_whitelist"
                />

            <RadioButton
                android:text="@string/userappsname_show_whitelist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userapps_show_whitelist" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>