<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/app_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/app_icon"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_label"
            android:layout_toLeftOf="@id/app_icon"
            android:textColor="#0099CC" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/viewTweaks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/settings_display_resource"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"
                    >
                </TextView>

                <Button
                    android:id="@+id/btnListRes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_list_resource"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_marginLeft="200dp"
                    />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/settings_display_permissions"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="18sp"
                    >
                </TextView>
                <Button
                    android:id="@+id/btnPermissions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_permissions"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_marginLeft="230dp"
                    />
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_subtitle"
                        android:layout_marginLeft="15dp"
                        android:textSize="24sp">
                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings_noise_add"
                        android:layout_marginLeft="30dp"
                        android:textSize="18sp">
                    </TextView>

                    <EditText
                        android:id="@+id/txtNoise"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:ems="3"
                        android:maxLines="1"
                        android:maxLength="3"
                        android:imeOptions="actionDone|flagNavigateNext"
                        android:hint="@string/Customer_hints"
                        android:padding="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
